@@ -3,7 +3,7 @@
     <popup name="button3">
        <menuitem name="LookUpItem" verb="LookUp" _label="_Look Up Selected Text" pixtype="stock" pixname="gtk-find"/>
        <separator/>
-       <menuitem name="ClearItem" verb="Clear" _label="_Clear" pixtype="stock" pixname="gtk-clear"/>
+       <menuitem name="ClearItem" verb="Clear" _label="Cl_ear" pixtype="stock" pixname="gtk-clear"/>
        <menuitem name="PrintItem" verb="Print" _label="_Print" pixtype="stock" pixname="gtk-print"/>
        <menuitem name="SaveItem" verb="Save" _label="_Save" pixtype="stock" pixname="gtk-save-as"/>
        <separator/>
